# pipewise

./: .dockerignore  .env.local  .gitignore  Dockerfile  INTEGRATION_SETUP.md  README.md  __main__.py  check_lead_status.py  conftest.py  crm_test_report.json  crm_test_report_fixed.json  crm_test_report_fixed_20250524_163152.json  crm_test_report_fixed_20250524_163547.json  crm_test_report_fixed_20250524_164008.json  crm_test_report_fixed_20250524_164116.json  database_final.sql  debug_backend.py  debug_workflow.py  docker-compose.yml  fix_mcp_config.py  fix_oauth_encryption.py  fix_oauth_mcp_diagnostics.py  list_leads.py  mcp_config.json  package-lock.json  pyproject.toml  pytest.ini  server.py  soluciones_implementadas.md  start-backend.py  supabase_rls_config.sql  test_encryption.py  test_meetings.py  test_new_lead.py  test_oauth_auth.py  test_oauth_credentials.py  test_oauth_manual.py  test_oauth_routes_fixed.py  test_qualifier_directly.py  test_rls_debug.py  (+2 more)
.claude/: CLAUDE.md
.cursor/rules/: cursor-rules.mdc  fastapi-cli.mdc  frontend-structure.mdc  openai-agents-context.mdc  openai-agents-mcp.mdc  openai-agents-orchestration.mdc  openai-agents-results.mdc  openai-agents-tools.mdc  project-structure.mdc  self-improve.mdc  tech-stack.mdc
.github/workflows/: ci-cd.yml  dependency-updates.yml  security-audit.yml
app/: __init__.py  __main__.py  database.py
app/agents/: agent.py  agents.py  lead_qualifier.py  meeting_scheduler.py  modern_agents.py  outbound_contact.py  whatsapp_agent.py
app/ai_agents/: agents.py
app/api/: IMPLEMENTATION_SUMMARY.md  agent_config.py  api.py  auth.py  calendar.py  config.py  events.py  integrations.py  leads_router.py  main.py  mcp_health.py  mcp_integration.py  oauth_handler.py  oauth_integration_manager.py  oauth_router.py  search.py  user_config_router.py  webhooks.py
app/auth/: auth_client.py  middleware.py  utils.py  (+2 more)
docs/: AGENT_MEMORIES_SETUP.md  CALENDLY_INTEGRATION_GUIDE.md  CHAT_SYSTEM.md  GOOGLE_INTEGRATIONS_GUIDE.md  GOOGLE_OAUTH_IMPLEMENTATION.md  GOOGLE_OAUTH_SETUP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_ENDPOINTS_SOLUTION.md  LEADS_INTEGRATION_STATUS.md  MEMORY_HANDOFF_IMPLEMENTATION.md  OAUTH_404_FIX.md  OAUTH_ENVIRONMENT_SETUP.md  OAUTH_GOOGLE_FIX.md  OAUTH_INTEGRATIONS_SIMPLIFIED.md  OAUTH_TROUBLESHOOTING.md  ONE_CLICK_INTEGRATIONS.md  PIPEDREAM_MCP_INTEGRATION.md  REACT_ERROR_FIX.md  README.md  REDIS_TO_SUPABASE_MIGRATION.md  SUPABASE_SETUP.md  improvements.md  integration_architecture.md  mcp-configuration.md  rules.md
frontend/: eslint.config.mjs  instrumentation.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  test-chat-simple.js  test-chat.js
tasks/: prd-backend-migration-to-nextjs-convex.md  prd-pipedream-mcp-integration.md  tasks-prd-backend-migration-to-nextjs-convex.md  tasks-prd-pipedream-mcp-integration.md
tests/: __init__.py  conftest.py  demo_enhanced_coordinator_system.py  demo_mcp_integration.py  demo_one_click_integrations.py  test_agent_mcp_factory.py  test_agents_workflow.py  test_enhanced_coordinator_basic.py  test_enhanced_coordinator_system.py  test_mcp_error_handling.py  test_mcp_integration.py  test_mcp_monitoring_integration.py  test_mcp_oauth_integration.py  test_memory_handoff_system.py  test_memory_simple.py  test_workflow_simple.py
(+161 files in other folders)
