[project]
name = "pipewise"
version = "2.0.0"
description = "Modern B2B SaaS Platform with OpenAI AgentSDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
    # OpenAI AgentSDK
    "agents>=0.1.0",
    "openai>=1.82.0",
    # Database & Async
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "supabase>=2.15.1",
    # Validation & Serialization
    "pydantic[email]>=2.11.5",
    "pydantic-settings>=2.0.0",
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    # Async Processing
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    # Monitoring & Observability
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    # Environment & Config
    "python-dotenv>=1.1.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.2",
    "requests>=2.32.3",
    # HTTP Client
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    
    # Code Quality
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    
    # Development Tools
    "pre-commit>=3.6.0",
    "rich>=13.7.0",
]

production = [
    # Production WSGI/ASGI
    "gunicorn>=21.2.0",
    
    # Monitoring
    "sentry-sdk[fastapi]>=1.40.0",
    
    # Performance
    "orjson>=3.9.0",
]
