[project]
name = "pipewise"
version = "2.0.0"
description = "Modern B2B SaaS Platform with OpenAI AgentSDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.5.3",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "openai>=1.90.0",
    "openai-agents>=0.0.19",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.0",
    "pydantic[email]>=2.11.5",
    "pyotp>=2.9.0",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "qrcode[pil]>=8.2",
    "redis[hiredis]>=5.2.1",
    "requests>=2.32.4",
    "sqlalchemy[asyncio]>=2.0.41",
    "structlog>=25.4.0",
    "supabase>=2.15.3",
    "tp>=0.2.0",
]
